# rl-learn

./: README.md  pyproject.toml
module_01_foundations/: assignment1_mdp_gridworld.ipynb  assignment1_mdp_gridworld.py  assignment2_dynamic_programming.ipynb  assignment2_dynamic_programming.py  lecture_notes.md
module_02_value_based/: assignment1_tabular_qlearning.ipynb  assignment1_tabular_qlearning.py  assignment2_deep_qnetwork.ipynb  assignment2_deep_qnetwork.py  assignment3_rainbow_components.ipynb  assignment3_rainbow_components.py  lecture_notes.md
module_03_policy_based/: assignment1_reinforce.ipynb  assignment1_reinforce.py  assignment2_actor_critic.ipynb  assignment2_actor_critic.py  assignment3_ppo_from_scratch.ipynb  assignment3_ppo_from_scratch.py  lecture_notes.md
module_04_model_based/: assignment1_dyna_q.ipynb  assignment1_dyna_q.py  assignment2_world_models.ipynb  assignment2_world_models.py  lecture_notes.md
module_05_advanced_policy/: assignment1_trpo_natural_gradient.ipynb  assignment1_trpo_natural_gradient.py  assignment2_soft_actor_critic.ipynb  assignment2_soft_actor_critic.py  assignment3_multi_agent_intro.ipynb  assignment3_multi_agent_intro.py  lecture_notes.md
module_06_rl_for_llms/: assignment1_reward_modeling.ipynb  assignment1_reward_modeling.py  assignment2_rlhf_pipeline.ipynb  assignment2_rlhf_pipeline.py  assignment3_grpo_implementation.ipynb  assignment3_grpo_implementation.py  lecture_notes.md
module_07_alignment_frontier/: assignment1_dpo_vs_rlhf.ipynb  assignment1_dpo_vs_rlhf.py  assignment2_process_reward_models.ipynb  (+4 more)
(+11 files in other folders)
