[project]
name = "rl-learn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "gymnasium[classic-control,box2d,mujoco]>=0.29",
    "numpy>=1.26",
    "tensorboard>=2.17",
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "trl>=0.9",
    "transformers>=4.43",
    "datasets>=2.20",
    "peft>=0.12",
    "jupytext>=1.16",
    "nbformat>=5.9",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rllearn"]
